Add NeroWireArt case study

--- a/clients.html
+++ b/clients.html
@@ -269,11 +269,11 @@ permalink: /clients/
                         </div>
                     </div>
                     <div class="col-4">
-                        <h3>LD Tiling Contractors</h3>
-                        <img src="https://sybiltec.com/images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
-                        <!-- <div class="padding-btn">
-                            <a class="btn-secondary" href="https://sybiltec.com/ld-tiling-contractors/">View LD Tiling Contractors &gt;&gt;</a>
-                        </div> -->
+                        <h3>NeroWireArt</h3>
+                        <img src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
+                        <div class="padding-btn">
+                            <a class="btn-secondary" href="https://sybiltec.com/nerowireart/">View NeroWireArt &gt;&gt;</a>
+                        </div>
                     </div>
                     <div class="col-4">
                         <h3>New Haw Community Centre</h3>
