--- a/nerowireart.html
+++ b/nerowireart.html
@@ -1,5 +1,5 @@
 ---
-permalink: /sitemap/
+permalink: /nerowireart/
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -25,20 +25,19 @@ permalink: /sitemap/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Sitemap"
+                "name": "NeroWireArt"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | Sybiltec Web Design</title>       
-        <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
-        <meta name="robots" content="all">
+        <title>NeroWireArt | Case Study | Sybiltec Web Design</title>       
+        <meta name="Description" content="NeroWireArt creates beautiful bonsai wire trees to enhance your home décor. We designed & developed NeroWireArt's website to showcase the unique pieces.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | Sybiltec Web Design" />
-        <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
-        <meta property="og:url" content="https://sybiltec.com/sitemap/" />
+        <meta property="og:title" content="NeroWireArt | Case Study | Sybiltec Web Design" />
+        <meta property="og:description" content="NeroWireArt creates beautiful bonsai wire trees to enhance your home décor. We designed & developed NeroWireArt's website to showcase the unique pieces." />
+        <meta property="og:url" content="https://sybiltec.com/nerowireart/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -113,7 +112,7 @@ permalink: /sitemap/
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/sitemap/" />
+        <link rel="canonical" href="https://sybiltec.com/nerowireart/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
@@ -150,7 +149,7 @@ permalink: /sitemap/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Sitemap</h1>
+                <h1>NeroWireArt</h1>
             </div>
         </div>
         <div class="main section">
@@ -161,77 +160,42 @@ permalink: /sitemap/
                     </li>
                     >
                     <li>
-                        Sitemap
+                        NeroWireArt
                     </li>
                 </ol>
-                <h2>Main</h2>
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/nerowireart.jpg" alt="NeroWireArt">
+                <h2>Services Delivered</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/about/">About</a></li>
-                    <li><a href="https://sybiltec.com/blog/">Blog Page 1</a></li>
-                    <li><a href="https://sybiltec.com/blog-2/">Blog Page 2</a></li>
-                    <li><a href="https://sybiltec.com/blog-3/">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients/">Case Studies</a></li>
-                    <li><a href="https://sybiltec.com/contact/">Contact</a></li>
-                    <li><a href="https://sybiltec.com/faqs/">FAQs</a></li>
-                    <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></li>
-                    <li><a href="https://sybiltec.com/projects/">Projects</a></li>
-                    <li><a href="https://sybiltec.com/services/">Services</a></li>
-                    <li><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></li>
+                    <li>Website design and development
+                    <li>Google Analytics setup</li>
+                    <li>Google Search Console submission</li>
+                        
                 </ul>
-                <h2>Services</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training/">Workshops</a></li>
-                    <li><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
-                    <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
-                    <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
-                </ul>
-                <h2>Case Studies</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/bexley-linkup/">Bexley Linkup</a></li>
-                    <li><a href="https://sybiltec.com/cnt-associates/">CNT Associates</a></li>
-                    <li><a href="https://sybiltec.com/crazy-thumbs/">Crazy Thumbs</a></li>
-                    <li><a href="https://sybiltec.com/fortis-dpc/">Fortis DPC</a></li>
-                    <li><a href="https://sybiltec.com/happily-clappily-ever-laughter/">Happily Clappily Ever Laughter</a></li>
-                    <li><a href="https://sybiltec.com/jenup/">JenUp</a></li>
-                    <li><a href="https://sybiltec.com/lcg-lift-consultancy/">LCG Lift Consultancy</a></li>
-                    <li><a href="https://sybiltec.com/nerowireart/">NeroWireArt</a></li>
-                    <li><a href="https://sybiltec.com/new-haw-community-centre/">New Haw Community Centre</a></li>
-                </ul>
-                <h2>Blog Posts</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools for Remote Working</a></li>
-                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify/">7 Reasons Why You Should be Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">8 Ways to Speed Up Your Windows PC</a></li>
-                    <li><a href="https://sybiltec.com/user-experience-ux/">9 Ways to Improve the UX (User Experience) of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins/">10 Best Free WordPress Plugins</a></li>
-                    <li><a href="https://sybiltec.com/common-website-mistakes/">10 Common Website Mistakes and How to Avoid Them</a></li>
-                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website/">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
-                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/accessible-website-design/">Accessible Design: Creating an Inclusive Website</a></li>
-                    <li><a href="https://sybiltec.com/website-compliance-quick-guide/">A Quick Guide to Website Compliance</a></li>
-                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Are You Inadvertently Abusing Your Customers' Data?</a></li>
-                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Free Workshops for Greenwich Borough</a></li>
-                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">How Does a Good Website Showcase Trust?</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4/">How Do I Upgrade to Google Analytics 4?</a></li>
-                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a></li>
-                    <li><a href="https://sybiltec.com/how-to-choose-web-designer/">How to Choose a Web Designer</a></li>
-                    <li><a href="https://sybiltec.com/improve-website-seo/">How to Improve the SEO of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-shopify-website/">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wix-website/">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website/">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/google-search-console/">How to Use Google Search Console: a Quick Guide</a></li>
-                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Remote Working: How to Survive with 6 Tips</a></li>
-                    <li><a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a></li>
-                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website/">The Importance of Contact Information on Your Website</a></li>
-                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a></li>   
-                    <li><a href="https://sybiltec.com/strategies-for-business-success/">Thriving Through Change: Smart Website Strategies for Small Business Success</a></li>
-                </ul>
+
+                <h2>Trees of Life</h2>
+
+                <p>NeroWireArt creates handcrafted bonsai wire tree art. These masterpieces are made by intricately shaping lengths of coloured wire to form perfect miniature trees. Each tree has a different shape, size and colour, thereby giving it a unique character. Bonsai wire trees are the perfect complement to your home décor.</p>
+
+                <p>NeroWireArt was operating from a limited online presence (Facebook and Instagram), and needed a way to display the beautiful works of art at their best, together with information about the artist, how the trees are made, and details about upcoming events and exhibitions.</p>
+
+                <h2>A New Online Presence</h2>
+
+                <p>We developed a website using the Wix platform for ease of creating dynamic pages. Dynamic pages were used to create the Galleries; there are galleries categorising the trees by size (Small, Medium, Large and Extra Large), which customers can browse. Later on we added a new dynamic page for What's New - this page showcases the latest creations added to NeroWireArt's collection. We utilised the dynamic pages feature to enable the client to easily add, edit or remove trees whenever required.</p>
+
+                <h2>Colour Palette</h2>
+
+                <p>Orange was used for the accent colour as it is a colour which frequently appears in Nero's trees. We then used grey for some sections, as the neutral shade does not conflict with the colours of the trees. Finally the black header creates a pleasing contrast to the grey and orange.</p>
+                
+                <p><strong><em>Homepage</em></strong></p>
+                <img class="case-study-screenshot" src="https://sybiltec.com/images/clients/www.nerowireart.com_.png" alt="NeroWireArt homepage">
+
+                <p>Zita Stone, Artist, says:</p>
+
+                <p><em>Outstanding support and ongoing experience of working with Sybil @Sybiltec. As an artist I had no idea about website set up and management and Sybil's suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</em></p>
+
+                <div class="padding-btn">
+                    <a class="btn-secondary" href="https://www.nerowireart.com/" target="_blank" rel="noopener noreferrer">View NeroWireArt &gt;&gt;</a>
+                </div>
             </div>
         </div>
         <div class="contact section">
