Add Best One-Page Website Designs of 2025

--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
                 <div class="row">
                     <div class="col-3"> 
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/free-workshops-greenwich-borough/">
-                                <img src="https://sybiltec.com/images/logos/low-res/royal-borough-of-greenwich.svg" alt="Royal Borough of Greenwich"></a>
+                            <a href="https://www.designrush.com/best-designs/websites/one-page" target="_blank" rel="noopener noreferrer">
+                                <img src="images/cnt-associates-400x209.webp" alt="CNT Associates"></a>
                             <div class="blog-card-text">                    
-                                <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Borough</a>
-                                <p>07 December 2024</p>
-                                <p>Our free workshops help you develop vital skills and strategies for your business or organisation.</p>
+                                <a href="https://www.designrush.com/best-designs/websites/one-page" class="blog-title" target="_blank" rel="noopener noreferrer">Best One-Page Website Designs of 2025</a>
+                                <p>18 March 2025</p>
+                                <p>Our work has been selected for <strong>The Best Professional Services Website Designs</strong> by DesignRush.</p>
                             </div>
                         </div>
                     </div>
