--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             <div class="row">
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/zitka-stone.webp" class="avatar" alt="Zita Stone">
-                        <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
+                        <img src="images/jenny-tomei.webp" class="avatar" alt="Jenny Tomei">
+                        <p><strong><em>Jenny Tomei,<br>Founder, JenUp</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
                             <img class="star" src="images/star.png">
@@ -255,13 +255,13 @@
                             <img class="star" src="images/star.png">
                             <img class="star" src="images/star.png">
                         </div>
-                        <p>Outstanding support and ongoing experience of working with Sybil @Sybiltec. Her suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</p>
+                        <p>Sybil is absolutely amazing to work with, she helped me build an e-learning platform for my website, and she took the time to explain everything to me on how to use it. She's very professional, approachable and always very proficient.</p>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
                         <img src="images/gary-parker.webp" class="avatar" alt="Gary Parker">
-                        <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
+                        <p><strong><em>Gary Parker,<br>Managing Director, CNT Associates</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
                             <img class="star" src="images/star.png">
@@ -274,8 +274,8 @@
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/aurore-lacabe.webp" class="avatar" alt="Aurore Lacabe">
-                        <p><strong><em>Aurore Lacabe, Voice Teacher</em></strong></p>
+                        <img src="images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
+                        <p><strong><em>Natalie Wright,<br>Director, LD Tiling Contractors</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
                             <img class="star" src="images/star.png">
@@ -283,7 +283,7 @@
                             <img class="star" src="images/star.png">
                             <img class="star" src="images/star.png">
                         </div>
-                        <p>Sybil was reliable and really supportive throughout the making of my website. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look.</p>
+                        <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
                     </div>
                 </div>
             </div>
