--- a/website-design.html
+++ b/website-design.html
@@ -466,7 +466,7 @@ permalink: /website-design/
                 <div class="col-4">
                     <div class="testimonial-card">
                         <img src="https://sybiltec.com/images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
-                        <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
+                        <p><strong><em>Natalie Wright,<br>Director, LD Tiling Contractors</em></strong></p>
                         <div class="stars">
                             <img class="star" src="https://sybiltec.com/images/star.png">
                             <img class="star" src="https://sybiltec.com/images/star.png">
@@ -480,7 +480,7 @@ permalink: /website-design/
                 <div class="col-4">
                     <div class="testimonial-card">
                         <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" class="avatar" alt="Happily Clappily Ever Laughter">
-                        <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
+                        <p><strong><em>Patricia Byrne,<br>CEO, Happily Clappily Ever Laughter</em></strong></p>
                         <div class="stars">
                             <img class="star" src="https://sybiltec.com/images/star.png">
                             <img class="star" src="https://sybiltec.com/images/star.png">
@@ -494,7 +494,7 @@ permalink: /website-design/
                 <div class="col-4">
                     <div class="testimonial-card">
                         <img src="https://sybiltec.com/images/logos/the-bamboo-wardrobe-logo.png" class="avatar" alt="The Bamboo Wardrobe">
-                        <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
+                        <p><strong><em>Caroline Wardell,<br>Founder, The Bamboo Wardrobe</em></strong></p>
                         <div class="stars">
                             <img class="star" src="https://sybiltec.com/images/star.png">
                             <img class="star" src="https://sybiltec.com/images/star.png">
