--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
                     <div class="col-6">
-                        <img src="images/clients/tech-diplomacy-academy-cropped.webp" alt="Tech Diplomacy Academy">
+                        <img src="images/clients/tech-diplomacy-academy.png" alt="Tech Diplomacy Academy">
                     </div>
                 </div>
             </div>
@@ -188,14 +188,14 @@
             <div class="padding-top center">
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
-                    <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Technology & Consultancy"><p class="customer">Emrys Technology & Consultancy</p></div>
+                    <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Group International"><p class="customer">Emrys Group International</p></div>
                     <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis Data Protection Compliance</p></div>
-                    <div class="col-3"><img src="images/clients/happily-clappily-ever-laughter.webp" alt="Happily Clappily Ever Laughter"><p class="customer">Happily Clappily Ever Laughter</p></div>
+                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"><img src="images/clients/lcg-lift-consultancy.webp" alt="LCG Lift Consultancy"><p class="customer">LCG Lift Consultancy</p></div>
                     <div class="col-3"><img src="images/clients/nerowireart.webp" alt="NeroWireArt"><p class="customer">NeroWireArt</p></div>
-                    <div class="col-3"><img src="images/clients/new-haw-community-centre.webp" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>
+                    <div class="col-3"><img src="images/clients/new-haw-community-centre.webp" alt="New Haw Community Centre"><p class="customer">New Haw Community Centre</p></div>   
+                    <div class="col-3"><img src="images/clients/tech-diplomacy-academy.webp" alt="Tech Diplomacy Academy"><p class="customer">Tech Diplomacy Academy</p></div>
                     <div class="col-3"><img src="images/clients/techwomen4boards.webp" alt="TechWomen4Boards"><p class="customer">TechWomen4Boards</p></div>
                 </div>
             </div>
@@ -354,30 +354,21 @@
                 <h2>Whom We Partner With</h2>
                 <hr>
                 <div class="row">
-                    <div class="col-1-5">
-                        <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates Ltd">
+                    <div class="col-2-4">
+                        <img src="https://sybiltec.com/images/logos/low-res/cnt-associates-ltd.webp" alt="CNT Associates">
                     </div>
-                    <div class="col-1-5">
-                        <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys Technology and Consultancy">
+                    <div class="col-2-4">
+                        <img src="https://sybiltec.com/images/logos/low-res/emrys-technology-and-consultancy.webp" alt="Emrys Group International">
                     </div>
-                    <div class="col-1-5">
+                    <div class="col-2-4">
                         <a href="https://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="https://sybiltec.com/images/logos/low-res/fsb-member.webp" alt="Visit FSB's website"></a>
                     </div>
-                    <div class="col-1-5">
-                        <img src="images/logos/low-res/learndash.webp" alt="LearnDash">
-                    </div>
-                    <div class="col-1-5">
+                    <div class="col-2-4">
                         <img src="https://sybiltec.com/images/logos/low-res/shopify-partners.webp" alt="Shopify Partners">
                     </div> 
-                    <div class="col-1-5">
-                        <img src="https://sybiltec.com/images/logos/low-res/wix.webp" alt="Wix">
+                    <div class="col-2-4">
+                        <img src="images/logos/low-res/designrush-verified-agency.webp" alt="Verified agency Designrush.com">
                     </div>
-                    <div class="col-1-5">
-                        <img src="images/logos/low-res/woocommerce.webp" alt="WooCommerce">
-                    </div>
-                    <div class="col-1-5">
-                        <img src="https://sybiltec.com/images/logos/low-res/wordpress.webp" alt="WordPress">
-                    </div>  
                 </div>
             </div>
         </div>
