--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Start Your Project Today</a>
                     </div>
                     <div class="col-6">
-                        <img src="images/clients/tech-diplomacy-academy.png" alt="Tech Diplomacy Academy">
+                        <img src="images/clients/tech-diplomacy-academy-cropped.webp" alt="Tech Diplomacy Academy">
                     </div>
                 </div>
             </div>
