--- a/case-study-template.html
+++ b/case-study-template.html
@@ -137,6 +137,8 @@ permalink: /client-name/
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
