--- a/website-review.html
+++ b/website-review.html
@@ -31,13 +31,13 @@ permalink: /website-review/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Review | Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service.">
+        <title>Website Review | London Surrey Kent | Sybiltec Web Design</title>       
+        <meta name="Description" content="A website review identifies critical issues with your website and how to rectify them. We can provide you with a PDF report. Get your website audit today.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Review | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service." />
+        <meta property="og:title" content="Website Review | London Surrey Kent | Sybiltec Web Design" />
+        <meta property="og:description" content="A website review identifies critical issues with your website and how to rectify them. We can provide you with a PDF report. Get your website audit today." />
         <meta property="og:url" content="https://sybiltec.com/website-review/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -153,7 +153,7 @@ permalink: /website-review/
         <div class="hero">
             <div class="container-1140">
                 <h1>Website Review</h1>
-                <h2>Start With an Audit of Your Site</h2>
+                <h2>Start With an Audit of Your Website</h2>
             </div>
         </div>
         <div class="main section">
@@ -176,6 +176,7 @@ permalink: /website-review/
                     <li>404 (page not found) errors</li>
                     <li>Proofing errors</li>
                     <li>Search engine optimisation (SEO)</li>
+                    <li>Security issues</li>
                 </ul>
                 <p>The report will be provided to you in PDF format and includes recommended actions to resolve the issues.</p>
                 <p>Download a sample website review below:</p>
