Add services submenu to top nav

--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -159,7 +159,20 @@ permalink: /user-experience-ux/
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about/">About</a>
-                                        <a href="https://sybiltec.com/services/">Services</a>
+                                                                                <div class="dropdown">
+                                            <button onclick="toggleDropdown()" class="dropbtn">Services 
+                                                <i class="fa-solid fa-angle-down"></i>
+                                            </button>
+                                            <div id="myDropdown" class="dropdown-content">
+                                                <a href="https://sybiltec.com/services/">All Services</a>
+                                                <a href="https://sybiltec.com/small-business-web-design/">Web Design</a>
+                                                <a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>
+                                                <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a>
+                                                <a href="https://sybiltec.com/website-review/">Website Review</a>
+                                                <a href="https://sybiltec.com/training/">Workshops</a>
+                                                <a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>
+                                            </div>
+                                        </div>
                                         <a href="https://sybiltec.com/clients/">Case Studies</a>
                                         <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/faqs/">FAQs</a>
