--- a/services.html
+++ b/services.html
@@ -31,12 +31,12 @@ permalink: /services/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services | Freelance Web Designer South East London | Sybiltec</title>       
-        <meta name="Description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact us today for a quote.">
+        <title>Services | London, Kent and Surrey | Sybiltec Web Design</title>       
+        <meta name="Description" content="Sybiltec is much more than a web design agency. We leverage the power of our network to offer a wide range of related services. Contact us today for a quote.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Services | Freelance Web Designer South East London | Sybiltec" />
-        <meta property="og:description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact us today for a quote." />
+        <meta property="og:title" content="Services | London, Kent and Surrey | Sybiltec Web Design" />
+        <meta property="og:description" content="Sybiltec is much more than a web design agency. We leverage the power of our network to offer a wide range of related services. Contact us today for a quote." />
         <meta property="og:url" content="https://sybiltec.com/services/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -250,7 +250,7 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-solid fa-pen-fancy"></i>
                     <h3>Copywriting</h3>
-                    <p>Our professional copywriters will create high quality copy for your website, blog posts, brochure, event or product descriptions.</p>
+                    <p>Our professional copywriters will create high quality copy for your website, blog posts, brochures, events or product descriptions.</p>
                     </div>
                     </div>
                     <div class="col-4">
@@ -262,19 +262,26 @@ permalink: /services/
                     </div>
                     <div class="col-4">
                         <div class="offer-card center">
+                            <i class="fa-solid fa-pen-ruler"></i>
+                    <h3>Logo Design</h3>
+                    <p>A logo represents the identity of your business. Our professional logo designers will ensure that you have the perfect logo to reflect your brand.</p>
+                    </div>
+                    </div>
+                </div>
+                    <div class="row">
+                    <div class="col-4">
+                        <div class="offer-card center">
                             <i class="fa-solid fa-camera"></i>
                         <h3>Photography</h3>
                         <p>A website isn't complete without beautiful photographs. Our experienced photographers will take care of your headshots, team photos or product photos.</p>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-4">
                         <div class="offer-card center">
-                            <i class="fa-solid fa-pen-ruler"></i>
-                    <h3>Logo Design</h3>
-                    <p>A logo represents the identity of your business. Our professional logo designers will ensure that you have the perfect logo to reflect your brand.</p>
-                    </div>
+                            <i class="fa-solid fa-video"></i>
+                        <h3>Videography</h3>
+                        <p>Create a dynamic website by leveraging the power of video. Our experts will create professional videos that enhance your brand's online presence.</p>
+                        </div>
                     </div>
                     <div class="col-4">
                         <div class="offer-card center">
@@ -283,14 +290,30 @@ permalink: /services/
                         <p>Building a strong social media presence takes significant time and effort. Our social media management service will do the heavy lifting for you.</p>
                         </div>
                     </div>
-                    <div class="col-4">
-                        <div class="offer-card center">
-                            <i class="fa-solid fa-coins"></i>
-                        <h3>Fundraising</h3>
-                        <p>Utilise our professional bid writing and grant writing services to help you secure the funding you need to start or grow your business or organisation.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="offer-card center">
+                                <i class="fa-regular fa-envelope"></i>
+                            <h3>Email Marketing</h3>
+                            <p>Grow your email list, engage your subscribers and nurture your leads with compelling email campaigns created by our trusted email marketers.</p>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="offer-card center">
+                                <i class="fa-solid fa-coins"></i>
+                            <h3>Fundraising</h3>
+                            <p>Utilise our professional bid writing and grant writing services to help you secure the funding you need to start or grow your business or organisation.</p>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="offer-card center">
+                                <i class="fa-solid fa-lock"></i>
+                        <h3>Cyber Security</h3>
+                        <p>In 2024, 50% of UK businesses experienced a <a href="https://www.gov.uk/government/statistics/cyber-security-breaches-survey-2024/cyber-security-breaches-survey-2024" target="_blank" rel="noopener noreferrer">cyber breach or attack</a>. Our experts will ensure that your organisation is protected against the latest threats.</p>
+                        </div>
                         </div>
                     </div>
-                </div>
                 <div class="row">
                     <div class="col-4">
                         <div class="offer-card center">
